# ragas-custom

./: .gitignore  README.md  pyproject.toml
notebooks/: metrics.ipynb  ragas_nq.ipynb
