[project]
name = "ragas-custom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "pillow>=11.3.0",
    "ragas",
    "rapidfuzz>=3.13.0",
]

[tool.uv.sources]
ragas = { path = "packages/ragas/ragas" }
